--- a/src/main/resources/db/migration/001-create-tables.yaml
+++ b/src/main/resources/db/migration/001-create-tables.yaml
@@ -1,30 +1,13 @@
 databaseChangeLog:
   - changeSet:
-      id: 001-create-tables
+      id: 001-create-user-table
       author: dev
       changes:
         - createTable:
-            tableName: roles
+            tableName: '"user"'
             columns:
               - column:
-                  name: id
-                  type: BIGINT
-                  autoIncrement: true
-                  constraints:
-                    primaryKey: true
-                    nullable: false
-              - column:
-                  name: name
-                  type: VARCHAR(100)
-                  constraints:
-                    nullable: false
-                    unique: true
-
-        - createTable:
-            tableName: users
-            columns:
-              - column:
-                  name: id
+                  name: user_id
                   type: BIGINT
                   autoIncrement: true
                   constraints:
@@ -32,54 +15,48 @@ databaseChangeLog:
                     nullable: false
               - column:
                   name: username
-                  type: VARCHAR(150)
+                  type: VARCHAR(50)
                   constraints:
                     nullable: false
                     unique: true
               - column:
-                  name: password
-                  type: VARCHAR(255)
-                  constraints:
-                    nullable: false
-              - column:
-                  name: email
-                  type: VARCHAR(255)
+                  name: first_name
+                  type: VARCHAR(100)
                   constraints:
                     nullable: true
               - column:
-                  name: enabled
-                  type: BOOLEAN
-                  defaultValueBoolean: true
+                  name: sur_name
+                  type: VARCHAR(100)
+                  constraints:
+                    nullable: true
+              - column:
+                  name: patronymic
+                  type: VARCHAR(100)
+                  constraints:
+                    nullable: true
+              - column:
+                  name: email
+                  type: VARCHAR(50)
+                  constraints:
+                    nullable: true
+                    unique: true
+              - column:
+                  name: telephone
+                  type: VARCHAR(50)
+                  constraints:
+                    nullable: true
+                    unique: true
+              - column:
+                  name: password
+                  type: VARCHAR(100)
                   constraints:
                     nullable: false
               - column:
-                  name: created_at
-                  type: TIMESTAMP
-                  defaultValueComputed: CURRENT_TIMESTAMP
+                  name: role
+                  type: VARCHAR(50)
                   constraints:
                     nullable: false
-
-        - createTable:
-            tableName: user_roles
-            columns:
-              - column:
-                  name: user_id
-                  type: BIGINT
-                  constraints:
-                    nullable: false
-              - column:
-                  name: role_id
-                  type: BIGINT
-                  constraints:
-                    nullable: false
-
       rollback:
         - dropTable:
-            tableName: user_roles
-            cascadeConstraints: true
-        - dropTable:
-            tableName: users
-            cascadeConstraints: true
-        - dropTable:
-            tableName: roles
+            tableName: '"user"'
             cascadeConstraints: true
