--- a/src/main/resources/db/migration/002-add-indexes-and-constraints.yaml
+++ b/src/main/resources/db/migration/002-add-indexes-and-constraints.yaml
@@ -1,46 +1,122 @@
 databaseChangeLog:
   - changeSet:
-      id: 002-unique-constraints-and-fks
+      id: 002-create-account-transaction
       author: dev
       changes:
-        - addPrimaryKey:
-            tableName: user_roles
-            columnNames: user_id, role_id
-            constraintName: pk_user_roles
-
-        - addForeignKeyConstraint:
-            baseTableName: user_roles
-            baseColumnNames: user_id
-            constraintName: fk_user_roles_user
-            referencedTableName: users
-            referencedColumnNames: id
-            onDelete: CASCADE
-
-        - addForeignKeyConstraint:
-            baseTableName: user_roles
-            baseColumnNames: role_id
-            constraintName: fk_user_roles_role
-            referencedTableName: roles
-            referencedColumnNames: id
-            onDelete: RESTRICT
-
-        - createIndex:
-            tableName: users
-            indexName: idx_users_username
+        - createTable:
+            tableName: account
             columns:
               - column:
+                  name: card_id
+                  type: BIGINT
+                  autoIncrement: true
+                  constraints:
+                    primaryKey: true
+                    nullable: false
+              - column:
+                  name: user_id
+                  type: BIGINT
+                  constraints:
+                    nullable: false
+                    foreignKeyName: fk_account_user
+                    references: '"user"(user_id)'
+              - column:
+                  name: card_number
+                  type: VARCHAR(50)
+                  constraints:
+                    nullable: false
+                    unique: true
+              - column:
+                  name: balance
+                  type: BIGINT
+                  constraints:
+                    nullable: false
+              - column:
+                  name: expiry_date
+                  type: DATE
+                  constraints:
+                    nullable: false
+              - column:
+                  name: status
+                  type: VARCHAR(50)
+                  defaultValue: ACTIVE
+                  constraints:
+                    nullable: false
+              - column:
+                  name: created_at
+                  type: TIMESTAMP
+                  defaultValueComputed: CURRENT_TIMESTAMP
+                  constraints:
+                    nullable: false
+
+        - createTable:
+            tableName: transaction
+            columns:
+              - column:
+                  name: transaction_id
+                  type: BIGINT
+                  autoIncrement: true
+                  constraints:
+                    primaryKey: true
+                    nullable: false
+              - column:
+                  name: from_account_id
+                  type: BIGINT
+                  constraints:
+                    nullable: false
+                    foreignKeyName: fk_transaction_from_account
+                    references: account(card_id)
+              - column:
+                  name: to_account_id
+                  type: BIGINT
+                  constraints:
+                    nullable: false
+                    foreignKeyName: fk_transaction_to_account
+                    references: account(card_id)
+              - column:
+                  name: amount
+                  type: BIGINT
+                  constraints:
+                    nullable: false
+              - column:
+                  name: type
+                  type: VARCHAR(50)
+                  constraints:
+                    nullable: false
+              - column:
+                  name: created_at
+                  type: TIMESTAMP
+                  defaultValueComputed: CURRENT_TIMESTAMP
+                  constraints:
+                    nullable: false
+
+        - createTable:
+            tableName: user_refresh_tokens
+            columns:
+              - column:
+                  name: refresh_token
+                  type: VARCHAR(1024)
+                  constraints:
+                    primaryKey: true
+                    nullable: false
+              - column:
                   name: username
+                  type: VARCHAR(255)
+                  constraints:
+                    nullable: false
+              - column:
+                  name: expiry_date
+                  type: TIMESTAMP
+                  constraints:
+                    nullable: false
 
       rollback:
-        - dropIndex:
-            indexName: idx_users_username
-            tableName: users
-        - dropForeignKeyConstraint:
-            baseTableName: user_roles
-            constraintName: fk_user_roles_user
-        - dropForeignKeyConstraint:
-            baseTableName: user_roles
-            constraintName: fk_user_roles_role
-        - dropPrimaryKey:
-            tableName: user_roles
-            constraintName: pk_user_roles
+        - dropTable:
+            tableName: user_refresh_tokens
+            cascadeConstraints: true
+        - dropTable:
+            tableName: transaction
+            cascadeConstraints: true
+        - dropTable:
+            tableName: account
+            cascadeConstraints: true
